resolved spacing issue of header and footer

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
   --smoky: #131112;
 }
 
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
 body {
   background-color: var(--smoky);
@@ -43,18 +47,6 @@ body {
 
 /* Resume Style End */
 
-/* Portfolio Start*/
-.carousal-image {
-  height: 400px;
-  width: 100%;
-}
-
-.carousel-item {
-  position: 'relative';
-}
-
-/* Portfolio End */
-
 /* Contact Form Style Start*/
 .ui.form .field>label {
   color: var(--carolina);
@@ -89,11 +81,15 @@ body {
 /* About Me End */
 
 /* Footer Style Start */
+  #footer {
+    margin-top: 30px;
+  }
+
   #footer-container {
     background-color: var(--blueblack);
     display: flex;
     justify-content: center;
-    position: fixed;
+    position: static;
     left: 0;
     bottom: 0;
     height: 75px;
